--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>CFUTV</groupId>
     <artifactId>CFUTV</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <repositories>
         <repository>
